# python-backend

Banco de Dados/: conexao.py  dbapi.py  meu_banco.db
Desenvolvimento de Api com Flask/dio_bank/: app.py  pyproject.toml  render-deploy.sh
Desenvolvimento de Api com Flask/dio_bank/instance/: blog.sqlite  dio_bank.sqlite
Desenvolvimento de Api com Flask/dio_bank/migrations/versions/: 0c4c4fde5744_add_password_field.py  4e6d92ee479f_ajustando_o_banco.py  94b7d8c5d56a_initial_migration.py  a5f6e85554d3_add_active_attr_in_user_table.py
Desenvolvimento de Api com Flask/dio_bank/src/: app.py  config.py  db.py  utils.py
Desenvolvimento de Api com Flask/dio_bank/src/controllers/: auth.py  post.py  role.py  user.py
Desenvolvimento de Api com Flask/dio_bank/src/models/: __init__.py  base.py  post.py  role.py  user.py
Desenvolvimento de Api com Flask/dio_bank/src/views/: role.py  user.py
Desenvolvimento de Api com Flask/dio_bank/tests/: test_utils.py
Desenvolvimento de Api com Flask/dio_bank/tests/integration/: conftest.py
Desenvolvimento de Api com Flask/dio_bank/tests/integration/controllers/: test_auth.py  test_post.py  test_role.py  test_user.py
Desenvolvimento de Api com Flask/dio_bank/tests/unit/: test_utils.py
Desenvolvimento fullstak com django/mysite/: pyproject.toml
Desenvolvimento fullstak com django/mysite/mysite/: settings.py  urls.py
