[project]
name = "dio-bank"
version = "0.1.0"
description = ""
authors = [
    {name = "Ender Guaina",email = "ender.guaina@gmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "flask (>=3.1.3,<4.0.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
